# mestats

./: Cargo.toml  justfile
model/: Cargo.toml
model/src/: lib.rs
src/: command.rs  main.rs
src/gh/: mod.rs  prepare.rs
